# public/Swagger/swagger.json
@@ -41,14 +41,28 @@
                         "description": "Forbidden"
                     }
                 }
-            },
-            "post": {
+            }
+        },
+        "/users/{userId}": {
+            "put": {
                 "tags": [
                     "Users"
                 ],
-                "summary": "Create a user",
-                "description": "Create a user",
-                "operationId": "2f68f0b2e18b7266d8812c0ca517101b",
+                "summary": "Update a user",
+                "description": "Update a user",
+                "operationId": "41d38a4f8e33cc6adbda34fec285a8e7",
+                "parameters": [
+                    {
+                        "name": "userId",
+                        "in": "path",
+                        "description": "ID of user to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -70,19 +84,26 @@
                             }
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
                     "422": {
                         "description": "Unprocessable Entity"
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
-            }
-        },
-        "/users/{userId}": {
+            },
             "delete": {
                 "tags": [
                     "Users"
@@ -118,14 +139,20 @@
                             }
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
                     "404": {
-                        "description": "User not found"
+                        "description": "User not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -183,9 +210,6 @@
                         "type": "string"
                     },
                     "poste": {
-                        "type": "string"
-                    },
-                    "status": {
                         "type": "string"
                     },
                     "created_at": {
